--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -205,7 +205,7 @@
 	<div id="sec3-right-cont">
 		<div id="sec3-boxes">
 			<a href="#sociology">
-				<div class="sec3-gridbox">
+				<div class="sec3-gridbox sec3-first-row">
 					<div>
 						<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 							width="50" height="50"
@@ -216,7 +216,7 @@
 				</div>
 			</a>
 			<a href="#sociology">
-				<div class="sec3-gridbox">
+				<div class="sec3-gridbox sec3-first-row">
 					<div>
 						<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 							width="50" height="50"
@@ -227,7 +227,7 @@
 				</div>
 			</a>
 			<a href="#sociology">
-				<div class="sec3-gridbox">
+				<div class="sec3-gridbox sec3-first-row">
 					<div>
 						<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 							width="50" height="50"
@@ -238,7 +238,7 @@
 				</div>
 			</a>
 			<a href="#sociology">
-				<div class="sec3-gridbox">
+				<div class="sec3-gridbox sec3-first-row">
 					<div>
 						<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 							width="50" height="50"
