--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<div>rakhilpr96@gmail.com</div>
 		</div>
-		<div id="apply">Apply Now</div>
+		<a href="#"><div id="apply">Apply Now</div></a>
 	</div>
 </div>
 
@@ -42,7 +42,7 @@
 				width="50" height="50"
 				viewBox="0 0 172 172"
 				style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#000000"><path d="M86,6.88c-43.65603,0 -79.12,35.46397 -79.12,79.12c0,43.65603 35.46397,79.12 79.12,79.12c43.65603,0 79.12,-35.46397 79.12,-79.12c0,-43.65603 -35.46397,-79.12 -79.12,-79.12zM86,13.76c39.93779,0 72.24,32.30221 72.24,72.24c0,39.93779 -32.30221,72.24 -72.24,72.24c-39.93779,0 -72.24,-32.30221 -72.24,-72.24c0,-39.93779 32.30221,-72.24 72.24,-72.24zM86,48.13985c-0.5332,0 -1.06371,0.12201 -1.54531,0.36281l-61.92,27.52c-1.1696,0.5848 -1.89469,1.79015 -1.89469,3.09735c0,1.3072 0.72509,2.51255 1.89469,3.09735l8.42531,5.75125v19.63219c-2.04614,1.19571 -3.44,3.39084 -3.44,5.91922c0,3.784 6.88,13.76 6.88,13.76c0,0 6.88,-9.976 6.88,-13.76c0,-2.52838 -1.39386,-4.72351 -3.44,-5.91922v-14.93578l3.44,2.34485v-5.56985c0,-2.58 0.6192,-4.74693 1.72,-6.60453c6.364,-10.5952 28.7584,-10.59547 43,-10.59547c13.8288,0 35.36347,0.00027 42.41547,9.73547c1.4792,2.0296 2.30453,4.50613 2.30453,7.46453v5.56985l18.74531,-12.8261c1.1696,-0.5504 1.89469,-1.75655 1.89469,-3.06375c0,-1.3072 -0.72509,-2.51255 -1.89469,-3.09735l-61.92,-27.52c-0.4816,-0.2408 -1.01211,-0.36281 -1.54531,-0.36281zM86,79.12c-19.264,0 -37.84,1.3416 -37.84,10.32v8.42531c5.9856,-2.752 17.0968,-4.98531 37.84,-4.98531c20.7432,0 31.8544,2.23331 37.84,4.98531v-8.42531c0,-8.9784 -18.576,-10.32 -37.84,-10.32zM86,99.76c-20.89845,0 -37.84,3.08028 -37.84,6.88c0,3.79972 16.94155,6.88 37.84,6.88c20.89845,0 37.84,-3.08028 37.84,-6.88c0,-3.79972 -16.94155,-6.88 -37.84,-6.88z"></path></g></g>
-			</svg><span id="brand-name">Mastery</span>
+			</svg><span id="brand-name">Lariox</span>
   	</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     	<span class="navbar-toggler-icon"></span>
@@ -158,7 +158,7 @@
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam architecto, ex veritatis tempora aliquid labore natus autem iusto magni dicta incidunt nostrum odit veniam voluptas provident minus saepe reiciendis nulla dolore delectus molestias<br><br>Numquam architecto, ex veritatis tempora aliquid labore natus autem iusto magni dicta incidunt nostrum odit veniam voluptas provident </p>
 	</div>
 	<div id="sec1-section2">
-		<img src="images/g1.jpg" alt="photo">
+		<img src="images/4.jpg" alt="photo">
 	</div>
 </div>
 
@@ -355,7 +355,7 @@
 		  		</div>
 		  		<div id="sec5-right-cont" class="col-md-6 col-xs-12">
 		  			<div id="sec5-circle"></div>
-		  			<div id="sec5-name">Jessey Rosey</div>
+		  			<div id="sec5-name">Carlos Lindner</div>
 		  			<div id="sec5-student">Student</div>
 		  			<p>Magna aliqua. Ut enim ad minim veniam, quis nostrud.Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.veniam, quis nostrud.Lorem ipsum </p>
 		  		</div>
@@ -497,7 +497,7 @@
 			<div id="ftr-box3" class="sec6-ftr-upper-widercont">
 				<h5>Newsletter</h5>
 				<div>
-					<div>
+					<div id="newsletter-box">
 						<input id="email-search" type="text" name="email" placeholder="Email">
 						<button id="ftr-email-button" type="button">
 							<div id="ftr-email">
@@ -530,8 +530,6 @@
 		</div>
 	</div>
 </div>
-
-
 
 
 
