--- a/Main page/index.html
+++ b/Main page/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Concert One' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Fugaz One' rel='stylesheet'>
 	<script src="js/script.js"></script>
 </head>
 <body onload="startTime()">
