--- a/My Page/index.html
+++ b/My Page/index.html
@@ -13,15 +13,14 @@
 <div id="main-container" class="flex-box-row">
 	<div id="box1">
 		<div id="content-box">
+
 			<div id="sections">
 				<div id="home" class="flex-box-row">
-					<div id="sec1">
 						<div id="sec1-heading">Hi.. I'm Rakhil</div>
-					</div>
 				</div>
-				<div id="section-2">
+				<!-- <div id="section-2">
 					<h1>About</h1>
-				</div>
+				</div> -->
 			</div>
 
 			<div id="footer" class="flex-box-row">
