--- a/Website 1/index.html
+++ b/Website 1/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>mastery</title>
+	<title>Lariox</title>
+	<link rel="shortcut icon" href="brand.svg" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
